MDEV-4521 MBRContains, MBRWithin no longer work with geometries of different type.         get_mm_leaf function can store all sorts of spatial features in         one type of field it receives from an Item_field.         So we just allow that by setting the type of this field to GEOMETRY.

per-file comments:
  mysql-test/r/gis-rtree.result
        result updated
  mysql-test/t/gis-rtree.test
        test case added.
  sql/opt_range.cc
        set geom_type=GEOMETRY if we got Field_geom.